--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -252,7 +252,7 @@
 									<br>
 									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
 									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
-									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
+									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, insalata, cipolla caramellata, pomodorini confit. Servito con patatine e a cottura media.
 									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
 									<div class="extra-space-hero">
 										<label><strong>Cottura</strong>
@@ -284,21 +284,157 @@
 							<h3>New York<span class="price">10,5 / doppio 14,5</span></h3>
 							<p>Manzo, cheddar, cipolla caramellata, insalata
 							<small>Contiene: Glutine, Latte, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
+								<div id="myModal1" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br>
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
+									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
+									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 						<li>
 							<h3>Diablo<span class="price">11,9 / doppio 15,9</span></h3>
 							<p>Manzo, cheddar, bacon croccante, rucola, salsa piccante
 							<small>Contiene: Glutine, Latte, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="diablo">+</a>
+								<div id="diablo" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br>
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
+									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
+									<p>Burger di manzo (180 grammi), cheddar, bacon croccante, rucola, salsa piccante. Servito con patatine e a cottura media.
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 						<li>
 							<h3>Pollo<span class="price">10,9 / doppio 14,9</span></h3>
 							<p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt
 							<small>Contiene: Glutine, Latte, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="myModal1">+</a>
+								<div id="myModal1" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br>
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
+									<h2 class="extra-space" id="modalTitle">Pollo</h2>
+									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 						<li>
 							<h3>Pulled Pork<span class="price">11,9</span></h3>
 							<p>Maiale sfilacciato, coleslaw, cetriolini, insalata riccia, salsa piccante
 							<small>Contiene: Anidride Solforosa e Solfiti, Glutine, Latte, Senape, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="pulledPork">+</a>
+								<div id="pulledPork" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br>
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
+									<h2 class="extra-space" id="modalTitle">Beerstrot</h2>
+									<p>Ingredienti: Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 					</ul>
 				</div>
@@ -311,6 +447,40 @@
 							<h3>Autunno<span class="price">11,9 / doppio 15,9</span></h3>
 							<p>Manzo, scamorza affumicata, crema di funghi, speck croccante
 							<small>Contiene: Glutine, Latte, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="autunno">+</a>
+								<div id="autunno" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br>
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
+									<h2 class="extra-space" id="modalTitle">Autunno<span class="price">11,9 / doppio 15,9</span></h2>
+									<p>Burger di manzo (180 grammi), scamorza affumicata, crema di funghi, speck croccante. Servito con patatine e a cottura media.
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 						<!-- <li>
 							<h3>Inverno<span class="price">11,9 / doppio 15,9</span></h3>
@@ -346,6 +516,40 @@
 							<h3>Carbonara<span class="price">11,9 / doppio 15,9</span></h3>
 							<p>Manzo, guanciale, crema di uovo, pecorino romano e pepe
 							<small>Contiene: Glutine, Latte, Uova</small></p>
+<!-- modale -->
+							<div class="extra-space-hero">
+								<a href="#" class="button tiny" data-reveal-id="carbonara">+</a>
+								<div id="carbonara" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+									<br>
+									<img src="https://www.beerstrot.it/asset/img/large/deciso.jpg" alt="" class="extra-space">
+									<h2 class="extra-space" id="modalTitle">Carbonara <span class="price">11,9</span></h2>
+									<p>Burger di manzo (180 grammi), guanciale; crema di uovo, pecorino romano e pepe. Servito con patatine e a cottura media.
+									<br><small>Allergeni: Glutine, Latte, Uova</small></p>
+									<div class="extra-space-hero">
+										<label><strong>Cottura</strong>
+											<select>
+												<option value="medio">Media</option>
+												<option value="husker">Molto al sangue</option>
+												<option value="starbuck">Al sangue</option>
+												<option value="apollo">Ben cotta</option>
+											</select>
+										</label>
+									</div>
+									<div class="">
+										<label><strong>Note</strong>
+											<textarea maxlength="200" id="" placeholder="eventuali variazioni"></textarea>
+										</label>
+									</div>
+								    <div class="counter left">
+										<input class="counter__input" type="text" value="0" name="counter" size="1" readonly="readonly" style="border:none; box-shadow:none;"/>
+										<a class="counter__increment" href="javascript:void(0)">+</a>
+										<a class="counter__decrement" href="javascript:void(0)">&ndash;</a>
+									</div>
+								  	<a href="#" class="button small right" data-reveal-id="myModal">Aggiungi al carrello</a>
+								  	<br><br><br>
+								  	<a class="close-reveal-modal" aria-label="Close">&#215;</a>
+								</div>
+<!-- fine modale -->
 						</li>
 						<!-- <li>
 							<h3>Greco<span class="price">10,5 / doppio 14,5</span></h3>
