--- a/asporto/indexonline.html
+++ b/asporto/indexonline.html
@@ -66,7 +66,7 @@
 	<div class="panel-asporto">
 		<div class="row">
 			<div class="medium-12 large-12 columns">
-				<h1>Asporto</h1>
+				<h1>Ordina l'asporto online</h1>
 				<hr>
 			</div>
 		</div>
@@ -80,10 +80,8 @@
 				</ul> -->
 				<!-- <h4><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</h4>
 				<h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
-				<span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071&nbsp;8853384</a></span>
-				<span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
 			</div>
-			<div class="medium-12 large-12 columns extra-space">
+			<div class="medium-12 large-12 columns">
 				<hr>
 			</div>
 		</div>
